# displays

./: .gitignore  .gitmodules  .rgignore  Cargo.toml  Justfile  LICENSE  README.md
.github/workflows/: CI.yml
backlight_linux/: Cargo.toml  README.md
backlight_linux/src/: lib.rs  manager.rs  types.rs
cli/: Cargo.toml
cli/src/: commands.rs  fetch.rs  main.rs
cli/src/commands/: apply.rs  query.rs
displays/: Cargo.toml  README.md
displays/docs/: crate.md
displays/docs/fragments/: astal-api-notes.md  astal-backend-selection.md  astal-smoke-test.md  backend-start-with-displays.md
displays/src/: display.rs  display_identifier.rs  error.rs  lib.rs  logical_display.rs  manager.rs  manager_types.rs  physical_display.rs  types.rs  windows.rs
displays/src/linux/: physical_manager.rs
displays/src/windows/: monitor.rs  monitor_info.rs  utils.rs
displays_astal/: Cargo.toml  README.md  meson.build  meson_options.txt
displays_astal/docs/: crate.md
displays_astal/examples/: test.js
displays_astal/include/: astal-displays.h  displays-astal.h
displays_astal/src/: enums.rs  error.rs  lib.rs  tests.rs
displays_astal/src/backend/: fake.rs  mod.rs  real.rs  types.rs
displays_astal/src/display/: ffi.rs  imp.rs  mod.rs
displays_astal/src/display_identifier/: ffi.rs  imp.rs  mod.rs
displays_astal/src/display_match/: ffi.rs  imp.rs  mod.rs
displays_astal/src/display_update/: ffi.rs  imp.rs  mod.rs
displays_astal/src/display_update_result/: ffi.rs  imp.rs  mod.rs
displays_astal/src/failed_display_update/: ffi.rs  imp.rs  mod.rs
displays_astal/src/logical_display/: ffi.rs  imp.rs  mod.rs
displays_astal/src/manager/: ffi.rs  imp.rs  mod.rs
displays_astal/src/physical_display/: ffi.rs  imp.rs  mod.rs
displays_astal/src/point/: ffi.rs  imp.rs  mod.rs
displays_astal/src/size/: ffi.rs  imp.rs  mod.rs
displays_logical_linux/: Cargo.toml  README.md
displays_logical_linux/docs/: crate.md
displays_logical_linux/src/: error.rs  lib.rs  manager.rs  types.rs  wayland.rs
displays_logical_types/: Cargo.toml  README.md
displays_logical_types/docs/: crate.md
displays_logical_types/docs/fragments/: displays-rust.md
displays_logical_types/src/: lib.rs  logical_display.rs  logical_display_metadata.rs  logical_display_state.rs  logical_display_update.rs  logical_display_update_content.rs
displays_logical_windows/: Cargo.toml  README.md
displays_logical_windows/docs/: crate.md
displays_logical_windows/src/: error.rs  lib.rs  manager.rs  types.rs
displays_physical_linux/: Cargo.toml  README.md
displays_physical_linux/docs/: crate.md
displays_physical_linux/docs/fragments/: displays-astal.md  start-with-displays.md
displays_physical_linux/src/: ddc.rs  edid.rs  error.rs  lib.rs  manager.rs  types.rs
displays_physical_linux/tests/fixtures/: linux_internal_panel_lgd_0x07c6_2880x1800_current_machine.edid
displays_physical_linux_logind/: Cargo.toml  README.md
displays_physical_linux_logind/docs/: crate.md
displays_physical_linux_logind/docs/fragments/: astal-build.md  crate-graph-note.md
displays_physical_linux_logind/src/: error.rs  lib.rs  manager.rs
displays_physical_linux_sys/: Cargo.toml  README.md
displays_physical_linux_sys/docs/: crate.md
displays_physical_linux_sys/docs/fragments/: displays-python.md
displays_physical_linux_sys/src/: error.rs  lib.rs  manager.rs  types.rs
displays_physical_types/: Cargo.toml  README.md
displays_physical_types/docs/: crate.md
displays_physical_types/src/: brightness.rs  lib.rs  physical_display.rs  physical_display_metadata.rs  physical_display_state.rs  physical_display_update.rs  physical_display_update_content.rs
displays_physical_windows/: Cargo.toml  README.md
displays_physical_windows/docs/: crate.md
displays_physical_windows/src/: error.rs  lib.rs  manager.rs  monitor.rs  monitor_info.rs  physical_monitor.rs  types.rs
displays_py/: Cargo.toml  README.md  displays.pyi
displays_py/docs/: crate.md
displays_py/docs/fragments/: python-dev-setup.md
displays_py/examples/: everything.py
displays_py/src/: display.rs  display_identifier.rs  display_match.rs  display_update.rs  display_update_result.rs  lib.rs
displays_types/: Cargo.toml  README.md
displays_types/docs/: crate.md
displays_types/src/: brightness.rs  display_identifier.rs  lib.rs  orientation.rs  pixel_format.rs  point.rs  size.rs
displays_windows_common/: Cargo.toml  README.md
displays_windows_common/docs/: crate.md
displays_windows_common/src/: error.rs  lib.rs  types.rs  utils.rs
docs/readme/: README.tpl
docs/readme/fragments/: astal-api-notes.md  astal-backend-selection.md  astal-build.md  astal-smoke-test.md  backend-start-with-displays.md  crate-graph-note.md  linux-platform-note.md  no-run-note.md  python-dev-setup.md  start-with-displays-helper.md  start-with-displays.md  windows-platform-note.md
docs/readme/fragments/examples/: displays-astal.md  displays-python.md  displays-rust.md
docs/readme/root/: README.src.md  published-crates.md  support-matrix.md  what-is-possible.md  workspace-layout.md
examples/cli/: Cargo.toml
examples/cli/src/: main.rs
examples/cli/src/commands/: apply.rs  query.rs
examples/cli_py/: README.md  pyproject.toml
examples/cli_py/src/: cli.py
lib/: Cargo.toml
lib/src/: display.rs  display_config.rs  display_identifier.rs  displays.rs  lib.rs  linux.rs  logical.rs  logical_display.rs  manager.rs  physical_display.rs  state.rs  types.rs  windows.rs
lib/src/linux/: physical_manager.rs
lib/src/logical/: windows.rs
lib/src/logical/windows/: display.rs  manager.rs  utils.rs
lib/src/physical/: windows.rs
lib/src/physical/windows/: display.rs  manager.rs  utils.rs
lib/src/windows/: logical_display.rs  logical_manager.rs  monitor.rs  monitor_info.rs  physical_display.rs  physical_manager.rs  physical_monitor.rs  utils.rs
py/: Cargo.toml  README.md  displays.pyi  pyproject.toml
py/examples/: everything.py
py/src/: display.rs  display_identifier.rs  display_update.rs  lib.rs
scripts/: generate-markdown  generate-readme
