[workspace]
resolver = "2"
members = [
    "displays_physical_linux_sys",
    "displays_physical_linux_logind",
    "displays_physical_linux",
    "displays_windows_common",
    "displays_physical_windows",
    "displays_logical_windows",
    "displays",
    "displays_py",
    "displays_astal",
    "examples/cli",
]
