[package]
name = "backlight_linux"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
description = "Rust library for querying and updating Linux backlight and LED brightness devices via sysfs"
license = "MIT"
repository = "https://github.com/AndreasBackx/displays"
homepage = "https://github.com/AndreasBackx/displays"
documentation = "https://docs.rs/backlight_linux"
readme = "README.md"
keywords = ["linux", "backlight", "brightness", "led", "sysfs"]
categories = ["os::linux-apis", "hardware-support", "api-bindings"]
include = [
    "/src/**/*.rs",
    "/Cargo.toml",
    "/README.md",
]

[workspace]

[lib]
name = "backlight_linux"
path = "src/lib.rs"

[dependencies]
thiserror = "2.0.17"

[dev-dependencies]
tempfile = "3.23.0"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu"]
