[package]
name = "displays"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
windows = { version = "0.58.0", features = [
    "Win32_Devices",
    "Win32_Devices_Display",
    "Win32_Foundation",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
] }
clap = { version = "4.5.18", features = ["derive"] }
prettytable = "0.10.0"
dialoguer = "0.11.0"

displays-lib = { path = "../lib", features = ["cli"] }
