[package]
name = "displays"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.40"
thiserror = "2.0.7"
displays_physical_types = { path = "../displays_physical_types" }

[target.'cfg(target_os = "windows")'.dependencies]
displays_logical_windows = { path = "../displays_logical_windows" }
displays_physical_windows = { path = "../displays_physical_windows" }
displays_windows_common = { path = "../displays_windows_common" }

[target.'cfg(target_os = "linux")'.dependencies]
displays_physical_linux = { path = "../displays_physical_linux" }

[dev-dependencies]
tempfile = "3.27.0"
