[package]
name = "displays"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "High-level cross-platform display querying and updates for Linux and Windows"
documentation = "https://docs.rs/displays"
readme = "README.md"
keywords = ["display", "monitor", "brightness", "linux", "windows"]
categories = ["hardware-support", "os::linux-apis", "os::windows-apis"]

[dependencies]
tracing = "0.1.40"
thiserror = "2.0.7"
displays_types = { version = "0.1.0", path = "../displays_types" }
displays_logical_types = { version = "0.1.0", path = "../displays_logical_types" }
displays_physical_types = { version = "0.1.0", path = "../displays_physical_types" }

[target.'cfg(target_os = "windows")'.dependencies]
displays_logical_windows = { version = "0.1.0", path = "../displays_logical_windows" }
displays_physical_windows = { version = "0.1.0", path = "../displays_physical_windows" }
displays_windows_common = { version = "0.1.0", path = "../displays_windows_common" }

[target.'cfg(target_os = "linux")'.dependencies]
displays_logical_linux = { version = "0.1.0", path = "../displays_logical_linux" }
displays_physical_linux = { version = "0.1.0", path = "../displays_physical_linux" }

[dev-dependencies]
tempfile = "3.27.0"
