[package]
name = "displays_astal"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "GLib and GObject bindings for the displays crate"
documentation = "https://docs.rs/displays_astal"
readme = "README.md"
keywords = ["display", "glib", "gobject", "gio", "astal"]
categories = ["api-bindings", "hardware-support"]

[lib]
name = "displaysastal"
crate-type = ["cdylib"]

[features]
default = []
faked = []

[dependencies]
displays = { version = "0.1.0", path = "../displays" }
gio = "0.22"
glib = "0.22"
