[package]
name = "displays_logical_windows"
version = "0.1.0"
edition = "2021"

[lib]
name = "displays_logical_windows"
path = "src/lib.rs"

[dependencies]
tracing = "0.1.40"
thiserror = "2.0.7"
windows = { version = "0.61.3", features = [
    "Win32_Devices",
    "Win32_Devices_Display",
    "Win32_Foundation",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell_Common",
] }
displays_windows_common = { path = "../displays_windows_common" }
