[package]
name = "displays_physical_linux"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Linux physical display brightness backends for the displays crate"
documentation = "https://docs.rs/displays_physical_linux"
readme = "README.md"
keywords = ["display", "linux", "brightness", "backlight", "ddc"]
categories = ["hardware-support", "os::linux-apis"]

[lib]
name = "displays_physical_linux"
path = "src/lib.rs"

[dependencies]
thiserror = "2.0.17"
tracing = "0.1.40"
ddc-hi = { version = "0.4.1", default-features = false, features = ["ddc-i2c"] }
displays_physical_linux_sys = { version = "0.1.0", path = "../displays_physical_linux_sys" }
displays_physical_linux_logind = { version = "0.1.0", path = "../displays_physical_linux_logind" }
displays_physical_types = { version = "0.1.0", path = "../displays_physical_types" }
displays_types = { version = "0.1.0", path = "../displays_types" }

[dev-dependencies]
tempfile = "3.23.0"
