[package]
name = "displays_physical_linux_logind"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
description = "Rust library for updating Linux display brightness through systemd-logind"
license = "MIT"
repository = "https://github.com/AndreasBackx/displays"
homepage = "https://github.com/AndreasBackx/displays"
documentation = "https://docs.rs/displays_physical_linux_logind"

[lib]
name = "displays_physical_linux_logind"
path = "src/lib.rs"

[dependencies]
dbus = "0.9.7"
thiserror = "2.0.17"
displays_physical_linux_sys = { path = "../displays_physical_linux_sys" }
