[package]
name = "displays_physical_linux_logind"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Linux brightness updates through systemd-logind for the displays crate"
documentation = "https://docs.rs/displays_physical_linux_logind"
readme = "README.md"
keywords = ["linux", "logind", "dbus", "brightness", "systemd"]
categories = ["hardware-support", "os::linux-apis", "api-bindings"]

[lib]
name = "displays_physical_linux_logind"
path = "src/lib.rs"

[dependencies]
dbus = "0.9.7"
thiserror = "2.0.17"
displays_physical_linux_sys = "0.1.0"
