[package]
name = "displays_physical_linux_sys"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Rust library for querying and updating Linux backlight and LED brightness devices via sysfs"
documentation = "https://docs.rs/displays_physical_linux_sys"
readme = "README.md"
keywords = ["linux", "backlight", "brightness", "led", "sysfs"]
categories = ["os::linux-apis", "hardware-support", "api-bindings"]
include = [
    "/src/**/*.rs",
    "/Cargo.toml",
    "/README.md",
]

[lib]
name = "displays_physical_linux_sys"
path = "src/lib.rs"

[dependencies]
thiserror = "2.0.17"

[dev-dependencies]
tempfile = "3.23.0"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu"]
