[package]
name = "displays_physical_windows"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Windows physical display brightness support for the displays crate"
documentation = "https://docs.rs/displays_physical_windows"
readme = "README.md"
keywords = ["display", "windows", "win32", "brightness", "ddc"]
categories = ["hardware-support", "os::windows-apis"]

[lib]
name = "displays_physical_windows"
path = "src/lib.rs"

[dependencies]
tracing = "0.1.40"
thiserror = "2.0.7"
edid-rs = "0.1.0"
windows = { version = "0.61.3", features = [
    "Win32_Devices",
    "Win32_Devices_Display",
    "Win32_Foundation",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell_Common",
] }
displays_logical_windows = { version = "0.1.0", path = "../displays_logical_windows" }
displays_windows_common = { version = "0.1.0", path = "../displays_windows_common" }
displays_physical_types = { version = "0.1.0", path = "../displays_physical_types" }
displays_types = { version = "0.1.0", path = "../displays_types" }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52.0"
