[package]
name = "displays_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "displays"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.25.1"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
displays_core = { package = "displays", path = "../displays" }
