[package]
name = "displays_py"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "PyO3-based Python bindings for the displays crate"
documentation = "https://docs.rs/displays_py"
readme = "README.md"
keywords = ["python", "pyo3", "display", "monitor", "brightness"]
categories = ["api-bindings", "development-tools::ffi", "hardware-support"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "displays"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.28.3"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
displays_core = { package = "displays", version = "0.1.0", path = "../displays" }
