[package]
name = "displays_types"
version = "0.1.0"
edition = "2021"

[lib]
name = "displays_types"
path = "src/lib.rs"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = [
    "Win32_Devices",
    "Win32_Devices_Display",
    "Win32_Foundation",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell_Common",
] }
