[package]
name = "displays_types"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Shared display-related data types used across the displays crate and platform backends"
documentation = "https://docs.rs/displays_types"
readme = "README.md"
keywords = ["display", "monitor", "types", "linux", "windows"]
categories = ["data-structures", "hardware-support"]

[lib]
name = "displays_types"
path = "src/lib.rs"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = [
    "Win32_Devices",
    "Win32_Devices_Display",
    "Win32_Foundation",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell_Common",
] }
