[package]
name = "displays_windows_common"
version = "0.1.0"
edition = "2021"

[lib]
name = "displays_windows_common"
path = "src/lib.rs"

[dependencies]
thiserror = "2.0.7"
windows = { version = "0.61.3", features = [
    "Win32_Devices",
    "Win32_Devices_Display",
    "Win32_Foundation",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell_Common",
] }
