[package]
name = "displays-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
tracing = "0.1.40"
windows = { version = "0.58.0", features = [
    "Win32_Devices",
    "Win32_Devices_Display",
    "Win32_Foundation",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
] }

prettytable = { version = "0.10.0", optional = true }

[features]
cli = ["dep:prettytable"]
