[package]
name = "displays-lib"
version = "0.1.0"
edition = "2021"

[features]
default = ["windows"]
windows = ["dep:windows", "dep:winreg", "dep:edid-rs"]
linux = ["dep:ddc-hi"]

[dependencies]
tracing = "0.1.40"
thiserror = "2.0.7"

windows = { version = "0.61.3", optional = true, features = [
    "Win32_Devices",
    "Win32_Devices_Display",
    "Win32_Foundation",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell_Common",
] }
winreg = { version = "0.52.0", optional = true }
edid-rs = { git = "https://github.com/AndreasBackx/edid-rs", rev = "f083f135e1c7077285b951f25692562f85d1aac1", optional = true }
ddc-hi = { version = "0.4.1", default-features = false, features = ["ddc-i2c"], optional = true }
