[package]
name = "displays-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "displays"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.3"
displays-lib = { path = "../lib" }
# pyo3-python-tracing-subscriber = "0.1.0"
pyo3-python-tracing-subscriber = { path = "../../../pyo3-python-tracing-subscriber" }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
