[package]
name = "displays-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "displays"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.25.1"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"

[target.'cfg(target_os = "windows")'.dependencies]
displays-lib = { path = "../lib", default-features = false, features = ["windows"] }

[target.'cfg(target_os = "linux")'.dependencies]
displays-lib = { path = "../lib", default-features = false, features = ["linux"] }
