[package]
name = "example_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
clap = { version = "4.5.18", features = ["derive"] }

displays = { path = "../../displays" }
enum_dispatch = "0.3.13"
color-eyre = "0.6.5"
eyre = "0.6.12"

[profile.release]
debug = true
