[project]
name = "displays-cli-py"
version = "0.1.0"
description = "Python CLI example for the displays bindings"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1.7",
  "displays",
]

[project.scripts]
displays-cli = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
displays = { path = "../../displays_py" }
